# commonroad-scenario-designer

./: .editorconfig  .env  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .prospector.yaml  CHANGELOG.md  Dockerfile  Jenkinsfile  MANIFEST.in  PUBLISH.md  README.md  README_New Features.md  base_start.py  convert_cr2odr.py  docs_requirements.txt  gui_pyqt5_update.py  install_sumo.sh  install_third_party.sh  mkdocs.yml  pedestrian_concept.py  pylintrc  pyproject.toml  pytest.ini  requirements.txt  run_docker.sh  setup.py  start.py  test_requirements.txt  test_script.py  tmp_README.md  tox.ini  unittest.xml
.github/workflows/: black.yml  flake8.yml  isort.yml  pre-commit.yml  python-app.yml
CI/: Dockerfile  build_images.sh
api/: api.py
ci/: .gitlab-ci.yml  Dockerfile  README.md  build.sh  run_docker.sh  run_tests.sh  test.sh  test_requirements.txt
ci/ubuntu_20_04/: Dockerfile  build.sh
ci/ubuntu_22_04/: Dockerfile  build.sh
crdesigner/: command_line.py  start_gui.py
crdesigner/api/: api.py
crdesigner/common/: common_file_reader_writer.py  file_reader.py  file_writer.py  helper.py  logging.py  sumo_available.py
crdesigner/comparison_visualization/: Lanelet2NodeVisualization.py  comparison_visualization.py  visualization.py
crdesigner/config/: config.py  config_base.py  general_config.py  gui_config.py  lanelet2_config.py  logging.py  opendrive_config.py  osm_config.py  settings_config.py
crdesigner/configurations/: configuration.py  configuration_builder.py  custom_settings.yaml  custom_settings_osm2cr.yaml  default_settings.json  default_settings.yaml  default_settings_osm2cr.yaml  definition.py  get_configs.py
crdesigner/crmapver/: config.py  map_verification_repairing.py
crdesigner/input_output/: api.py  command_line.py  opendrive_convert.py  osm_convert.py
crdesigner/io/: api.py  command_line.py  opendrive_convert.py  osm_convert.py
crdesigner/lanelet_lanelet2/: cr2lanelet.py  lanelet2.py  lanelet2_parser.py  lanelet2cr.py  lanelet2osm.py  osm.py  osm2lanelet.py  parser.py
crdesigner/map_conversion/: map_conversion_interface.py
crdesigner/opendrive/: README.md
crdesigner/osm2cr/: config.py  example.py  main.py
crdesigner/sumo_map/: config.py  example.py  merge.py  sumo2cr.py  sumolib_net.py  util.py
crdesigner/ui/: command_line.py
crdesigner/verification_repairing/: config.py  map_verification_repairing.py
crmapconverter/: Untitled.ipynb  Untitled1.ipynb  ZAM_Tutorial-1_2_T-3.xml  ZAM_Tutorial-1_2_T-4.xml  map_creator.py  map_creator2.py  trajectory_planner.py
crmapconverter/io/: .gitignore  gui-2.0.py  gui.py  opendrive_convert.py  osm_convert.py  viewer.py  visualize_commonroad.py
crmapconverter/lanelet_lanelet2/: lanelet2osm.py  osm2lanelet.py  parser.py
crmapconverter/opendrive/: README.md
crmapconverter/opendriveconversion/: README.md  TrafficSign.py  conversion_lanelet.py  conversion_lanelet_network.py  converter.py  lanelet.py  lanelet_network.py  network.py  utils.py
crmapconverter/opendriveparser/: parser.py
crmapconverter/osm/: lanelet2osm.py  osm.py  osm2lanelet.py  parser.py
crmapconverter/osm2cr/: config.py  example.py  main.py  ocean.py  ped_conversion.py  readme.rst  requirements.txt  tests.py
crmapconverter/sumo_map/: .gitignore  README.md  __init__.py  config.py  cr2sumo.py  errors.py  example.py  mapping.py  requirements.txt  sumo2cr.py  util.py
doc/source/: conf.py  index.rst  open_drive.rst  osm.rst
docs/: Makefile  cr2l2.md  cr2odr.md  doc_requirements.txt  docs_build_script.sh  docs_requirements.txt  example.md  gui.md  index.md  l22cr.md  lanelet2.md  map_conversion_interface_api.md  map_verification_api.md  odr2cr.md  open_drive.md  osm2cr.md  requirements_doc.txt  sumo.md
docs/gui/: gui.md
docs/osm2cr/: Makefile  make.bat  readme.lnk
docs/source/: 000_installation.rst  010_open_drive.rst  020_osm.rst  030_commonroad_scenario_designer.rst  030_cr_designer.rst  040_sumo.rst  050_development.rst  050_lanelet2.rst  automation.rst  commonroad_scenario_designer.rst  conf.py  converter-package.rst  converter.rst  gui_guide.rst  implementation.rst  index.rst  index_opendrive.rst  index_osm.rst  lanelet2.rst  open_drive.rst  osm.rst  sumo.rst  system_design.rst  tutorial.rst
docs_old/source/: index.rst
example/: osm2cr.py
examples/: intermediateformat_to_sumo.py  osm2cr.py
examples/files/: intersection.osm
files/: garching_kreuzung.osm  only_straigt_extended.osm  only_straigt_test.osm
gui/: CONSTANTS.py  gui.py
gui/mwindow/: mwindow.py  mwindow_controller.py
hol_spec/: Formula.g4  antrl4.md
meta/docs/: README.md
old/: README.md
opendrive2lanelet/: conversion_lanelet.py  conversion_lanelet_network.py  converter.py  lanelet.py  lanelet_network.py  network.py  utils.py
opendrive2lanelet/io/: XML_commonRoad_XSD.xsd  convert.py  extended_file_writer.py  gui.py  opendrive_convert.py  osm_convert.py  viewer.py
opendrive2lanelet/opendriveparser/: parser.py
opendrive2lanelet/osm/: lanelet2osm.py  osm.py  osm2lanelet.py  parser.py
opendrive2lanelet/plane_elements/: border.py  plane.py  plane_group.py
scripts/: osm_to_lanelet2.py  translate.py
test/: .gitignore  map_creator_unit_tests.py  map_creator_unittest.py  run_tests.py  test_command_line.py  test_cr2sumo.py  test_cr2sumo_conversion.py  test_cr_to_lanelet_conversion.py  test_cr_to_osm_lanelet_conversion.py  test_lanelet_lanelet2_to_cr_conversion.py  test_opendrive_conversion.py  test_opendrive_files.py  test_osm2cr_conversion.py  test_osm_to_cr_lanelet_conversion.py  utils.py
test/conversion/: test_cr2sumo_conversion.py  test_cr_to_lanelet_conversion.py  test_lanelet_lanelet2_to_cr_conversion.py  test_opendrive_conversion.py
test/gui_test_files/: invalid_lanelet_polygons.xml
test/lanelet_lanelet2_test_files/: merging_lanelets_utm.xml  traffic_priority_lanelets_utm.xml  traffic_speed_limit_utm.osm  traffic_speed_limit_utm.xml  (+1 more)
tests/: test_configuration.py  test_requirements.txt
tutorials/: aerial_image_background.ipynb  commonroad_scenario_designer.ipynb  map_verification.py
(+1882 files in other folders)
